kubernetes_training/istio/sampleapp/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: sampleapp-gateway
spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - sampleapp.devops.org
